--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 id="wicrs" class="title">WICRS</h1>
+    <h1 id="wicrs" class="title">Blazenarchy</h1>
     <p>This is the website for the Blazenarchy Minecraft server. Blazenarchy is an anarchy themed Minecraft Java Edition
         server with only one rule: don't bother the admins. You are allowed to use Cheats or utility mods of any kind as
         long as it does not harm the server (cause crashes). Note that we do not allow illegaly obtained copies of
